tests/ui/lint/snapshots/or_fn_call_constructor_wrapping_work.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:8:23]
 7 │   let o: Option<Option<int>> = Some(None)
 8 │   let _ = o.unwrap_or(Some(make_default()))
   ·                       ──────────┬─────────
   ·                                 ╰── always evaluated
 9 │ }
   ╰────
  help: Replace `.unwrap_or(...)` with `.unwrap_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
