tests/ui/lint/snapshots/or_fn_call_go_stdlib_call.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:6:19]
 5 │   let o: Option<int> = Some(1)
 6 │   let _ = o.ok_or(errors.New("boom"))
   ·                   ─────────┬────────
   ·                            ╰── always evaluated
 7 │ }
   ╰────
  help: Replace `.ok_or(...)` with `.ok_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
