tests/ui/lint/snapshots/or_fn_call_map_or.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:8:20]
 7 │   let o: Option<int> = Some(1)
 8 │   let _ = o.map_or(make_default(), |x| x + 1)
   ·                    ───────┬──────
   ·                           ╰── always evaluated
 9 │ }
   ╰────
  help: Replace `.map_or(...)` with `.map_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
