tests/ui/lint/snapshots/or_fn_call_native_constructor.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:4:23]
 3 │   let o: Option<Map<string, int>> = Some(Map.new())
 4 │   let _ = o.unwrap_or(Map.new())
   ·                       ────┬────
   ·                           ╰── always evaluated
 5 │ }
   ╰────
  help: Replace `.unwrap_or(...)` with `.unwrap_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
