tests/ui/lint/snapshots/or_fn_call_native_method_identifier.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:5:23]
 4 │   let o: Option<bool> = Some(true)
 5 │   let _ = o.unwrap_or(Slice.contains(s, 2))
   ·                       ──────────┬─────────
   ·                                 ╰── always evaluated
 6 │ }
   ╰────
  help: Replace `.unwrap_or(...)` with `.unwrap_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
