tests/ui/lint/snapshots/or_fn_call_unwrap_or_option.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Unnecessary eager evaluation
   ╭─[test.lis:8:23]
 7 │   let o: Option<int> = Some(1)
 8 │   let _ = o.unwrap_or(make_default())
   ·                       ───────┬──────
   ·                              ╰── always evaluated
 9 │ }
   ╰────
  help: Replace `.unwrap_or(...)` with `.unwrap_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
