tests/ui/lint/snapshots/or_fn_call_unwrap_or_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary eager evaluation
   ╭─[test.lis:8:23]
 7 │   let r: Result<int, string> = Ok(1)
 8 │   let _ = r.unwrap_or(make_default())
   ·                       ───────┬──────
   ·                              ╰── always evaluated
 9 │ }
   ╰────
  help: Replace `.unwrap_or(...)` with `.unwrap_or_else(...)` so the fallback runs only when needed · code: [lint.or_fn_call]
